change cron job time and remove windows configuration