@@ -15,7 +15,6 @@ usage () {
   echo "Available platforms:"
   echo " * linux-64"
   echo " * linux-arm"
-  echo " * windows-64"
   echo " * other"
   exit 1
 }
@@ -58,12 +57,6 @@ check_requirement "Unzip" "which unzip" "Missing unzip binary"
 if [ $PLATFORM != "other" ]; then
   check_requirement "Jlink" "which jlink" "Missing jlink binary"
 fi
-if [ $PLATFORM = "all" -o $PLATFORM = "windows-64" ]; then
-  check_requirement "Inno Extractor" "which innoextract" "Missing innoextract binary"
-  check_requirement "Inno Setup" "ls i*setup-*.exe" "Missing Inno Setup (http://www.jrsoftware.org/isdl.php)"
-  check_requirement "Windows 64 Java" "ls OpenJDK*64_windows*.zip" "Missing Windows 64 JDK (https://adoptium.net/)"
-  check_requirement "Wine" "which wine" "Missing wine binary"
-fi
 if [ $PLATFORM = "all" -o $PLATFORM = "linux-64" -o $PLATFORM = "linux-arm" ]; then
   check_requirement "Makeself" "which makeself" "Missing makeself binary"
 fi
@@ -90,19 +83,11 @@ prepare () {
   cp -r ../traccar-web/build/* out/web
   cp traccar.xml out/conf
 
-  if [ $PLATFORM = "all" -o $PLATFORM = "windows-64" ]; then
-	innoextract i*setup-*.exe >/dev/null
-	info "If you got any errors here try Inno Setup version 5.5.5 (or check supported versions using 'innoextract -v')"
-  fi
 }
 
 cleanup () {
   info "Cleanup"
   rm -r out
-  if [ $PLATFORM = "all" -o $PLATFORM = "windows-64" ]; then
-	rm -r tmp
-	rm -r app
-  fi
 }
 
 package_other () {
@@ -115,17 +100,6 @@ package_other () {
   ok "Created Zip archive"
 }
 
-package_windows () {
-  info "Building Windows 64 installer"
-  unzip -q OpenJDK*64_windows*.zip
-  jlink --module-path jdk-*/jmods --add-modules java.se,jdk.charsets,jdk.crypto.ec,jdk.unsupported --output out/jre
-  rm -rf jdk-*
-  wine app/ISCC.exe traccar.iss >/dev/null
-  rm -rf out/jre
-  zip -q -j traccar-windows-64-$VERSION.zip Output/traccar-setup.exe README.txt
-  rm -r Output
-  ok "Created Windows 64 installer"
-}
 
 package_linux () {
   cp setup.sh out
@@ -165,7 +139,6 @@ case $PLATFORM in
   all)
 	package_linux_64
 	package_linux_arm
-	package_windows
 	package_other
 	;;
 
@@ -175,10 +148,6 @@ case $PLATFORM in
 
   linux-arm)
 	package_linux_arm
-	;;
-
-  windows-64)
-	package_windows
 	;;
 
   other)
